fix(bug): fix non display of filter section on mobile view - add button to display filter div - add button to hide filter div when closing the div - modify navigation.js with methods to enable the function - add styling for filter div on mobile view - modify div to reflect on all pages
[Delivers 165969270]

--- a/UI/css/general.css
+++ b/UI/css/general.css
@@ -240,11 +240,12 @@ img{
   margin: auto;
 }
 
-.modal select, .modal textarea {
+select, .modal textarea {
   width: 100%;
 }
 
 option{
 
-  width: 50%;
+
+  width: 50px;
 }
